kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-api
spec:
  # Auto-filled by Kustomize
  selector: {}
  template:
    metadata:
      # Auto-filled by Kustomize
      labels: {}
    spec:
      containers:
      - name: data-api
        # Tag to be updated by the CI pipeline
        image: ghcr.io/sangwa/lz-tha:latest
        ports:
        - name: http
          containerPort: 8080
        resources:
          # Provide minimal resource requests.
          # Limits are better to be set when the actual resource consumption is determined from
          # metrics and/or derived from requirements, otherwise CPU throttling or disruptive
          # premature OOMKills may occur.
          requests:
            cpu: 50m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: http
        readinessProbe:
          httpGet: &readinessHttpGet
            path: /healthz/ready
            port: http
        # Allow time for the initial fetch of data
        startupProbe:
          httpGet: *readinessHttpGet
