kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-api
spec:
  # Auto-filled by Kustomize
  selector: {}
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
